--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,5 +3,9 @@
     <dimen name="button_text_size">24sp</dimen>
     <dimen name="display_text_size">48sp</dimen>
 
+    <dimen name="button_top_margin">1dp</dimen>
+    <dimen name="button_bottom_margin">1dp</dimen>
+    <dimen name="button_left_margin">1dp</dimen>
+    <dimen name="button_right_margin">1dp</dimen>
     <dimen name="base_button_radius">8dp</dimen>
 </resources>
