電卓アプリ　第二回 　・Selectorの追加 　・Relative/Frame Layoutのサンプル追加（簡易的なもの） 　・ConstraintLayoutのサンプル追加（簡易的なもの） 　・横画面のレイアウト追加 　・PlantUMLの追加（デフォルト状態のもの）

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/seven"
@@ -107,7 +106,8 @@
         android:textSize="@dimen/display_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="19dp" />
+        tools:layout_editor_absoluteY="19dp"
+        tools:ignore="MissingConstraints" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group2"
