--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:onClick">"sendMessage"</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@drawable/normal_button_selector</item>
     </style>
