--- a/app/src/main/res/layout/constraint_calc.xml
+++ b/app/src/main/res/layout/constraint_calc.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toStartOf="@+id/equalButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@+id/space"
+        app:layout_constraintStart_toEndOf="@+id/allClearButton"
         app:layout_constraintTop_toBottomOf="@+id/twoButton" />
 
     <Button
@@ -69,7 +69,7 @@
         android:text="@string/one"
         android:theme="@style/NumberButtonTheme"
         android:background="@drawable/number_button_selector"
-        app:layout_constraintBottom_toTopOf="@+id/space"
+        app:layout_constraintBottom_toTopOf="@+id/allClearButton"
         app:layout_constraintEnd_toStartOf="@+id/twoButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_weight="1"
@@ -218,10 +218,12 @@
         app:layout_constraintStart_toEndOf="@+id/nineButton"
         app:layout_constraintTop_toBottomOf="@+id/displayNum" />
 
-    <Space
-        android:id="@+id/space"
+    <Button
+        android:id="@+id/allClearButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:text="@string/allclear"
+        android:theme="@style/BaseButtonTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/zeroButton"
         app:layout_constraintHorizontal_bias="0.5"
