電卓アプリ　第八回 　・dataBindingを追加 　・sendMessageのロジックを削除 　・BaseAllClearStateクラスをリネーム

--- a/app/src/main/res/layout/constraint_calc.xml
+++ b/app/src/main/res/layout/constraint_calc.xml
@@ -5,7 +5,7 @@
     tools:context=".MainActivity">
     <data>
         <variable name="handler" type="com.example.samplecalc.model.InputContract"/>
-        <import type="android.view.View"/>
+        <import type="com.example.samplecalc.model.Operation"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,6 +19,7 @@
             android:background="@drawable/number_button_selector"
             android:text="@string/zero"
             android:theme="@style/NumberButtonTheme"
+            android:onClick="@{() -> handler.InputNumber(@string/zero)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/equalButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -48,6 +49,7 @@
             android:background="@drawable/normal_button_selector"
             android:text="@string/div"
             android:theme="@style/BaseButtonTheme"
+            android:onClick="@{() -> handler.InputOperation(Operation.DIV)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -62,6 +64,7 @@
             android:background="@drawable/number_button_selector"
             android:text="@string/two"
             android:theme="@style/NumberButtonTheme"
+            android:onClick="@{() -> handler.InputNumber(@string/two)}"
             app:layout_constraintBottom_toTopOf="@+id/zeroButton"
             app:layout_constraintEnd_toStartOf="@+id/threeButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -75,6 +78,7 @@
             android:layout_height="0dp"
             android:text="@string/one"
             android:theme="@style/NumberButtonTheme"
+            android:onClick="@{() -> handler.InputNumber(@string/one)}"
             android:background="@drawable/number_button_selector"
             app:layout_constraintBottom_toTopOf="@+id/allClearButton"
             app:layout_constraintEnd_toStartOf="@+id/twoButton"
@@ -90,6 +94,7 @@
             android:background="@drawable/number_button_selector"
             android:text="@string/three"
             android:theme="@style/NumberButtonTheme"
+            android:onClick="@{() -> handler.InputNumber(@string/three)}"
             app:layout_constraintBottom_toTopOf="@+id/equalButton"
             app:layout_constraintEnd_toStartOf="@+id/multiButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -104,6 +109,7 @@
             android:background="@drawable/normal_button_selector"
             android:text="@string/multi"
             android:theme="@style/BaseButtonTheme"
+            android:onClick="@{() -> handler.InputOperation(Operation.MULTI)}"
             app:layout_constraintBottom_toTopOf="@+id/divButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -118,6 +124,7 @@
             android:background="@drawable/number_button_selector"
             android:text="@string/four"
             android:theme="@style/NumberButtonTheme"
+            android:onClick="@{() -> handler.InputNumber(@string/four)}"
             app:layout_constraintBottom_toTopOf="@+id/oneButton"
             app:layout_constraintEnd_toStartOf="@+id/fiveButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -133,6 +140,7 @@
             android:background="@drawable/number_button_selector"
             android:text="@string/six"
             android:theme="@style/NumberButtonTheme"
+            android:onClick="@{() -> handler.InputNumber(@string/six)}"
             app:layout_constraintBottom_toTopOf="@+id/threeButton"
             app:layout_constraintEnd_toStartOf="@+id/minusButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -147,6 +155,7 @@
             android:background="@drawable/normal_button_selector"
             android:text="@string/minus"
             android:theme="@style/BaseButtonTheme"
+            android:onClick="@{() -> handler.InputOperation(Operation.MINUS)}"
             app:layout_constraintBottom_toTopOf="@+id/multiButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -161,6 +170,7 @@
             android:background="@drawable/number_button_selector"
             android:text="@string/five"
             android:theme="@style/NumberButtonTheme"
+            android:onClick="@{() -> handler.InputNumber(@string/five)}"
             app:layout_constraintBottom_toTopOf="@+id/twoButton"
             app:layout_constraintEnd_toStartOf="@+id/sixButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -175,6 +185,7 @@
             android:background="@drawable/number_button_selector"
             android:text="@string/seven"
             android:theme="@style/NumberButtonTheme"
+            android:onClick="@{() -> handler.InputNumber(@string/seven)}"
             app:layout_constraintBottom_toTopOf="@+id/fourButton"
             app:layout_constraintEnd_toStartOf="@+id/eightButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -190,6 +201,7 @@
             android:background="@drawable/number_button_selector"
             android:text="@string/eight"
             android:theme="@style/NumberButtonTheme"
+            android:onClick="@{() -> handler.InputNumber(@string/eight)}"
             app:layout_constraintBottom_toTopOf="@+id/fiveButton"
             app:layout_constraintEnd_toStartOf="@+id/nineButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -204,6 +216,7 @@
             android:background="@drawable/number_button_selector"
             android:text="@string/nine"
             android:theme="@style/NumberButtonTheme"
+            android:onClick="@{() -> handler.InputNumber(@string/nine)}"
             app:layout_constraintBottom_toTopOf="@+id/sixButton"
             app:layout_constraintEnd_toStartOf="@+id/plusButton"
             app:layout_constraintHorizontal_bias="0.5"
@@ -218,6 +231,7 @@
             android:background="@drawable/normal_button_selector"
             android:text="@string/plus"
             android:theme="@style/BaseButtonTheme"
+            android:onClick="@{() -> handler.InputOperation(Operation.PLUS)}"
             app:layout_constraintBottom_toTopOf="@+id/minusButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -231,6 +245,7 @@
             android:layout_height="0dp"
             android:text="@string/allclear"
             android:theme="@style/BaseButtonTheme"
+            android:onClick="@{() -> handler.InputAllClear()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/zeroButton"
             app:layout_constraintHorizontal_bias="0.5"
